// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpaceX Component when \`useFetch\` is awaiting promise to resolve displays \`Loading...\` 1`] = `
<div>
  <section
    class="spacex-container"
  >
    <h2>
      Next Space X Launch
    </h2>
    <section
      class="loader"
    >
      <div
        class="loader-wheel"
      />
      <div
        class="loader-text"
      >
        Loading
      </div>
    </section>
    0
  </section>
</div>
`;

exports[`SpaceX Component when \`useFetch\` returns data displays data 1`] = `
<div>
  <section
    class="spacex-container"
  >
    <h2>
      Next Space X Launch
    </h2>
    <div
      class="spacex-mega"
    >
      <div>
        357674
         
        days
         
      </div>
      <div>
        10
         
        hours
         
      </div>
      <div>
        21
         
        minutes
         
      </div>
      <div>
        47
         
        seconds
         
      </div>
    </div>
    <h3>
      mission_name_future
    </h3>
    <div
      class="spacex-item"
    >
      <label>
        When:
      </label>
      <span>
        Wednesday, January 1, 3000, 12:00 AM
      </span>
    </div>
    <div
      class="spacex-item"
    >
      <label>
        Rocket:
      </label>
      <span>
        rocket_name_future
      </span>
    </div>
    <div
      class="spacex-item"
    >
      <label>
        Launch Site:
      </label>
      <span>
        site_name_long_future
      </span>
    </div>
    <div
      class="spacex-details"
    >
      future details
    </div>
  </section>
</div>
`;

exports[`SpaceX Component when \`useFetch\` returns data when 500 status returned displays error messaging 1`] = `
<div>
  <section
    class="spacex-container"
  >
    <h2>
      Next Space X Launch
    </h2>
    <section>
      <h3>
        Whoops! There was a problem loading
         
        SpaceX data.
      </h3>
      <p>
        Please reload browser to try again in a little bit.
      </p>
    </section>
  </section>
</div>
`;

exports[`SpaceX Component when \`useFetch\` returns data when no data returned displays no data 1`] = `
<div>
  <section
    class="spacex-container"
  >
    <h2>
      Next Space X Launch
    </h2>
    0
  </section>
</div>
`;
